src/snapshots/atuio__tui__tests__cursor_left.snap
---
source: src/tui.rs
expression: test.render()
---
1.0━│━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━⢸━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━atuio━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┌───────────┐
┃   │⢀   ⣀  ⢀⡀  ⣀  ⢀⡀  ⣀  ⢀⡀  ⣀  ⢀⡀⢸ ⣀  ⢀⡀  ⣀  ⢀⡀  ⣀  ⢀⡀  ⣀  ⢀⡀  ⣀  ⢀⡀  ⣀  ⢀⡀  ⣀  ⢀⡀  ⣀   ⡀  ⢀   ⡀  ⢀   ⡀  ⢀   ⡀  ⢀   ⡀  ⢀   ⡀  ⢀   ⡀  ⢀   ⡀  ⢀   ⡀│sine440.wav│
┃   │⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇⢸ ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣾⡀ ⢰⢇  ⡾⡄ ⢰⢧  ⡜⡄ ⢠⢣  ⡜⡆ ⢠⢳  ⡸⡆ ⢀⢷  ⡸⡇ ⢀⢿  ⢸⡇  ⣿└───────────┘
┃   │⡎⡇ ⢠⢻  ⡜⡇ ⢀⢿  ⡸⡇ ⢀⢿  ⢸⡇  ⣿  ⢸⡇⢸ ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⢣  ⡟⡄ ⢸⢣  ⡟⡄ ⢸⢱  ⡏⡆ ⢸⢱  ⡏⡆ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡎⡇ ┃
┃   │⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⠸⡀ ⡎⢇⢸⢰⠹⡀ ⡜⢣ ⢠⠋⡆ ⡜⢱ ⢠⠋⡆ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ┃
┃   │⡇⢇ ⢸⠸⡀ ⡇⢇ ⢸⠈⡆ ⡇⢱ ⢸⠈⡆ ⡇⢱ ⢸ ⡇ ⡇⢸⢸⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡜⢸ ⢠⠃⡇ ⡜⢸ ⢠⠃⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⢇ ┃
┃   │⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸⢸⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢠⠃⡇ ⡜⢸ ⢠⠃⡇ ⡜⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⢇ ⢸⠸⡀ ⡇⢇ ⢸⠸⡀ ⡇⢱ ⢸⠈⡆ ⡇⢱ ⢸⠈⡆ ⡇⢸ ┃
┃   │⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸⢸⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⢇ ⡇⠸⡀⢸ ⢇ ⡇⠈⡆⢠⠃⢱ ⡜⠈⡆⢠⠃⢸ ⡸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ┃
┃   │⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸⢸⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⠘⡄⢸ ⢣ ⡇⠘⡄⢸ ⢱ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢰⠁⢸ ⡎ ⡇⢀⠇⢸ ⡸ ⡇⢀⠇⢸ ┃
-1.0│ ⢸ ⡎ ⡇⢰⠁⢸ ⡎ ⡇⢀⠇⢸ ⡸ ⡇⢀⠇⢸ ⡸ ⡇ ⡇⢸⢸⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⠘⡄⢸ ⢣ ⡇⠘⡄⢸ ⢣ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡆
┃   │ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢰⠁⢸⢸⡎ ⢣⢰⠁⠘⡄⡎ ⢣⢀⠇ ⡇⡸ ⢸⢀⠇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇
┃   │ ⢸ ⡇ ⢇⢸ ⠸⡀⡇ ⢣⢸ ⠘⡄⡇ ⢱⢸  ⡇⡇ ⢸⢸  ⢸⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢰⠁ ⡇⡎ ⢸⢠⠃ ⡇⡜ ⢸⢀⠇ ⡇⡸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇
┃   │  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⢸⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡎ ⢸⢰⠁ ⡇⡎ ⢸⢠⠃ ⡇⡸ ⢸⢀⠇ ⡇⡸ ⢸⢀⠇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⠸⡀⡇ ⢣⢸ ⠘⡄⡇ ⢣⢸ ⠈⡆⡇ ⢱⢸  ⡇⡇
┃   │  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⢸⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⠸⣸  ⢇⡇ ⠸⣸  ⢣⡎ ⠘⣴⠁ ⢣⡎ ⠘⣴⠁ ⢸⡸  ⣇⠇ ⢸⡸  ⣇⠇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇
┃   │  ⣧⠃ ⢸⡸  ⣇⠇ ⢸⡸  ⣇⠇ ⢸⢸  ⡇⡇ ⢸⢸  ⢸⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⣇⡇ ⠸⣸  ⢣⡇ ⠘⣼  ⢣⡇ ⠘⣼  ⢱⡇ ⠈⣾  ⢱⡇ ⠈⣾  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣷⠁ ⢸⡜  ⣧⠃
┃   │  ⢿  ⠸⡇  ⢿  ⠸⡇  ⢿  ⠸⡇  ⢿  ⠘⡇  ⢸  ⠘⡎  ⢳⠁ ⠈⡎  ⢱⠁ ⠈⡟  ⢸⠃  ⡟  ⢸⠃  ⡿  ⢸⠇  ⡿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⢿┃
┃   │                              ⢸                                                                                                                           ┃
0.0 │                              ⢸                                                                                                                           ┃
┃   └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┗━0.0━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Move <WASD> Rect <R> Quit <Q> ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━0.1
