src/snapshots/atuio__tui__tests__load.snap
---
source: src/tui.rs
expression: test.render()
---
Chart━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━atuio━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
1.0 │⡇                                                                                                                                             ┌───────────┐
┃   │⡇⡀  ⣄  ⢠⡀  ⣄  ⢠⡀  ⣤  ⢠⡄  ⣤  ⢠⡄  ⣤  ⢠⡄  ⣤  ⢠⡄  ⣤  ⢠⡄  ⣤  ⢀⡄  ⣠  ⢀⡄  ⣠  ⢀⡄  ⣠  ⢀⡄  ⣠   ⡄  ⢠   ⡄  ⢠   ⡄  ⢠   ⡄  ⢠   ⡄  ⢠   ⡄  ⢠   ⡄  ⢠   ⡄  ⢠   ⡄│sine440.wav│
┃   │⡇⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⢇  ⡿⡀ ⢸⢇  ⡟⡄ ⢸⢣  ⡞⡄ ⢰⢣  ⡞⡆ ⢰⢳  ⡜⡆ ⢠⢳  ⡜⡇ ⢠⢿  ⡸⡇ ⢀⢿└───────────┘
┃   │⡇⡇ ⢰⢹  ⡎⡇ ⢠⢻  ⡜⡇ ⢠⢻  ⡸⡇ ⢀⢿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⢇  ⡿⡀ ⢸⢇  ⡿⡀ ⢸⢱  ⡏⡆ ⢸⢱  ⡏⡆ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡎⡇ ┃
┃   │⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⠘⡄ ⡇⢣ ⢸⠘⡄ ⡎⢱ ⢰⠁⡇ ⡎⢸ ⢰⠁⡇ ⡸⢸ ⢀⠇⡇ ⡸⢸ ⢀⠇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ┃
┃   │⡇⢣ ⢸⠘⡄ ⡇⢱ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡎⢸ ⢰⠁⡇ ⡎⢸ ⢰⠁⡇ ⡜⢸ ⢀⠇⡇ ⡸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⠸⡀ ⡇⢣ ┃
┃   │⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢰⠁⡇ ⡎⢸ ⢠⠃⡇ ⡜⢸ ⢀⠇⡇ ⡸⢸  ⡇⡇ ⢸⠸⡀ ⡇⢣ ⢸⠘⡄ ⡇⢣ ⢸⠈⡆ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ┃
┃   │⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⢇ ⡇⠘⡄⢸ ⢣ ⡇⠈⡆⢸ ⢱ ⡇ ⡇⢸ ⢸ ⡎ ⡇⢰⠁⢸ ⡎ ⡇⢠⠃⢸ ⡸ ⡇⢀⠇⢸ ⡸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ┃
-1.0│⡇⢸ ⡸ ⡇⢀⠇⢸ ⡸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⠘⡄⢸ ⢣ ⡇⠘⡄⢸ ⢣ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢰⠁⢸ ⡎ ⡇⢰⠁⢸ ⡀
┃   │⡇⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢰⠁⢸ ⡎ ⡇⢰⠁⢸ ⡎ ⡇⢀⠇⢸ ⡸ ⡇⢀⠇⢸ ⡸ ⡇ ⡇⠘⡄⢸ ⢣ ⡇⠘⡄⢸ ⢣ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇
┃   │⡇⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⢣⢸ ⠘⡄⡇ ⢣⢸ ⠘⡄⡇ ⢸⢸  ⡇⡇ ⢸⢰⠁ ⡇⡎ ⢸⢰⠁ ⡇⡎ ⢸⢀⠇ ⡇⡸ ⢸⢀⠇ ⡇⡸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇
┃   │⡇⠘⡄⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢰⠁ ⡇⡎ ⢸⢰⠁ ⡇⡜ ⢸⢀⠇ ⡇⡸ ⢸⢀⠇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⢸ ⡇ ⡇⢸ ⠸⡀⡇ ⢇⢸ ⠘⡄⡇ ⢣⢸ ⠘⡄⡇
┃   │⡇ ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢰⠁ ⢇⡜ ⠸⣠⠃ ⢇⡜ ⠸⣠⠃ ⢱⡸ ⠈⡆⡇ ⢱⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇
┃   │⡇ ⣧⠃ ⢸⣸  ⣇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⡇⡇ ⢸⢸  ⢇⡇ ⠸⣸  ⢇⡇ ⠸⣸  ⢣⡇ ⠘⣼  ⢣⡇ ⠘⣼  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡎  ⣷⠁ ⢸⡎  ⣧⠃ ⢸⡜  ⣧⠃
┃   │⡇ ⣿  ⢸⡇  ⣿  ⠸⡇  ⢿  ⠸⡏  ⢷⠁ ⠘⡎  ⢳⠁ ⠘⡞  ⢳⠃ ⠈⡞  ⢱⠃ ⠈⡾  ⢸⠇  ⡿  ⢸⠇  ⡿  ⢸⠇  ⡿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿  ⢸⡇  ⣿┃
┃   │⡇ ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈   ⠁  ⠈⠁  ⠉  ⠈⠁  ⠉  ⠈⠁  ⠉  ⠈⠁  ⠉  ⠈⠁  ⠉  ⠈⠁  ⠈   ⠁  ⠈   ⠁  ⠈┃
0.0 │⡇                                                                                                                                                         ┃
┃   └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┗━0.0━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ Move <WASD> Rect <R> Quit <Q> ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━0.1
